# Code/OPC-UA_Client_Server_TEST/API/Maps/MachineMaps.cs
@@ -27,7 +27,8 @@ namespace API.Maps
                 gesamtTubenAnzZiel = value;
                 return gesamtTubenAnzZiel;
             });
-            resetBitGroup.MapGet("/", () =>  resetBit);
+            resetBitGroup.MapPost("/Machine1", (int serverID, MachineServices service) =>  service.PostResetbitMachine1(serverID));
+            resetBitGroup.MapPost("/Machine2", (int serverID, MachineServices service) =>  service.PostResetbitMachine2(serverID));
             resetBitGroup.MapPost("/", ([FromBody] int value) =>
             {
                 if(value == 1 || value == 0)
@@ -37,8 +38,8 @@ namespace API.Maps
                 }
                 return -1;
             });
-            gesamtTubenAnzDataGroup.MapGet("/TAA1", (int serverID, MachineServices service) => service.GetGesamttubenanzahlTAA1(serverID));
-            gesamtTubenAnzDataGroup.MapGet("/TAA2", (int serverID, MachineServices service) => service.GetGesamttubenanzahlTAA2(serverID));
+            gesamtTubenAnzDataGroup.MapGet("/Machine1", (int serverID, MachineServices service) => service.GetGesamttubenanzahlMachine1(serverID));
+            gesamtTubenAnzDataGroup.MapGet("/Machine2", (int serverID, MachineServices service) => service.GetGesamttubenanzahlMachine2(serverID));
             return routes;
         }
     }
